add: mobile images. update: product layout

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,8 @@
                     Contact
                   </h1>
                   <figure>
-                    <img src="https://raw.githubusercontent.com/ianauxly/robinsons-static/master/images/Robinsons_Map.jpg" alt="">
+                    <img class="mobile-display-none" src="https://raw.githubusercontent.com/ianauxly/robinsons-static/master/images/Robinsons_Map.jpg" alt="">
+                    <img class="desktop-display-none" src="images/mobile/Robinsons_Map.jpg" alt="">
                   </figure>
                   <h3>
                     Thank you for your interest. For all enquiries
