--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
 
           </header>
 
+          <div id="age-gate">
+
+          </div>
+
 
           <main id="main" class="home" role="main">
 
@@ -159,7 +163,7 @@
                   <div class="row">
                     <div class="product column _25">
                       <div class="inner-width-mobile">
-                          <img src="images/black-glass-jar.jpeg" alt="">
+                          <img src="images/cropped/Robinsons_jar.jpg" alt="">
                           <p class="title">Fire O.G. Kush</p>
                           <p class="description">
                             Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
@@ -174,7 +178,7 @@
                     </div>
                     <div class="product column _25 mobile-bordertop">
                       <div class="inner-width-mobile">
-                        <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
+                        <img class="mobile-display-none" src="images/cropped/Robinsons_jar.jpg" alt="">
                         <p class="title">Fire O.G. Kush</p>
                         <p class="description">
                           Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
@@ -189,7 +193,7 @@
                     </div>
                     <div class="product column _25 mobile-bordertop">
                       <div class="inner-width-mobile">
-                        <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
+                        <img class="mobile-display-none" src="images/cropped/Robinsons_jar.jpg" alt="">
                         <p class="title">Fire O.G. Kush</p>
                         <p class="description">
                           Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
@@ -204,7 +208,7 @@
                     </div>
                     <div class="product column _25 mobile-bordertop">
                       <div class="inner-width-mobile">
-                          <img class="mobile-display-none" src="images/black-glass-jar.jpeg" alt="">
+                          <img class="mobile-display-none" src="images/cropped/Robinsons_jar.jpg" alt="">
                           <p class="title">Fire O.G. Kush</p>
                           <p class="description">
                             Morbi aliquam ut erat nec congue. Praesent id eleifend tellus. Morbi commodo, metus at facilisis porta, leo arcu gravida lacus, sede aliquam massa nunc nec arcu.
@@ -228,10 +232,11 @@
                     </p>
                   </div>
                 </section>
-<!--
+
                 <section id="imgAlone">
-                  <img src="images/black-bags.jpg" alt="">
-                </section> -->
+                  <img class="mobile-display-none" src="images/cropped/Robinsons_Image_7.jpg" alt="">
+                  <img class="desktop-display-none" src="images/mobile/Robinsons_Image_7-mobile.jpg" alt="">
+                </section>
 
                 <section id="region" class="row center">
                   <div class="inner-width square">
