eod: start revision mobile next

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   Newsletter
                 </li>
                 <li role="menuitem" id="home-button">
-                  <a href="index.html">robinsons cannabis</a>
+                  <a href="index.html">Robinsons Cannabis</a>
                 </li>
                 <li role="menuitem" class="social-links">
                   <a href="https://www.instagram.com/robinsonscannabis/" target="_blank">Facebook</a>
