update: desktop and mobile revision 1

--- a/careers.html
+++ b/careers.html
@@ -151,7 +151,7 @@
                         We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
                       </p>
                       <p>
-                        View full job listing here
+                        View full job listing <a class="italic" ref="">here</a>
                       </p>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                         We’re currently seeking an Executive Administrative Assistant to join our growing team on a part-time basis from date of hire until February 3, 2019. As of February 4, 2019, this role will become full-time in nature.
                       </p>
                       <p>
-                        View full job listing here
+                        View full job listing <a class="italic" ref="">here</a>
                       </p>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
           </main>
 
 
-          <footer id="footer" role="contentinfo">
+          <footer class="small-caps" id="footer" role="contentinfo">
                 <div id="logos" class="row center">
                       <div id="thistle" class="column">
                         <img src="images/SVG/thistle-logo.svg" alt="">
