--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
           </main>
 
 
-          <footer id="footer" role="contentinfo">
+          <footer class="small-caps" id="footer" role="contentinfo">
                 <div id="logos" class="row center">
                       <div id="thistle" class="column">
                         <img src="images/SVG/thistle-logo.svg" alt="">
