--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             <span class="italic">Press Release</span>, 04.04.2018
                           </p>
                           <p class="preview">
-                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. <a class="italic" href="">Read More</a>
                           </p>
                         </div>
                       </div>
@@ -295,7 +295,7 @@
                             <span class="italic">Press Release</span>, 04.04.2018
                           </p>
                           <p class="preview">
-                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. <a class="italic" href="">Read More</a>
                           </p>
                         </div>
                       </div>
@@ -308,7 +308,7 @@
                             <span class="italic">Press Release</span>, 04.04.2018
                           </p>
                           <p class="preview">
-                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. <a class="italic" href="">Read More</a>
                           </p>
                         </div>
                       </div>
@@ -321,7 +321,7 @@
                               <span class="italic">Press Release</span>, 04.04.2018
                             </p>
                             <p class="preview">
-                              Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. Read More
+                              Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. <a class="italic" href="">Read More</a>
                             </p>
                         </div>
                       </div>
@@ -331,7 +331,7 @@
           </main>
 
 
-          <footer id="footer" role="contentinfo">
+          <footer class="small-caps" id="footer" role="contentinfo">
                 <div id="logos" class="row center">
                       <div id="thistle" class="column">
                         <img src="images/SVG/thistle-logo.svg" alt="">
