--- a/shop.html
+++ b/shop.html
@@ -129,7 +129,7 @@
           </main>
 
 
-          <footer id="footer" class="shop" role="contentinfo">
+          <footer class="small-caps shop" id="footer" role="contentinfo">
                 <div id="logos" class="row center">
                       <div id="thistle" class="column">
                         <img src="images/SVG/thistle-logo-white.svg" alt="">
