update: revison 2 complete

--- a/contact.html
+++ b/contact.html
@@ -166,8 +166,8 @@
           </main>
 
 
-          <footer class="small-caps" id="footer" role="contentinfo">
-                <div id="logos" class="row center">
+          <footer class="" id="footer" role="contentinfo">
+                <div id="logos" class="row center small-caps">
                       <div id="thistle" class="column">
                         <img src="images/SVG/thistle-logo.svg" alt="">
                         <p class="small">
