--- a/index.html
+++ b/index.html
@@ -124,7 +124,28 @@
                 </section>
 
                 <section id="tagline" class="row center blockquote inner-width">
-                    <h3 class="small-caps">Established M . M . X .V. I . I . I . </h3>
+                  <div id="logos" class="row center small-caps">
+                        <div id="thistle" class="column">
+                          <img src="images/SVG/thistle-logo.svg" alt="">
+                          <p class="small">
+                            Robinsons
+                            <br>
+                            Annapolis Valley
+                            <br>
+                            Valley Cirsium
+                          </p>
+                        </div>
+                        <div id="lighthouse" class="column">
+                          <img src="images/SVG/lighthouse-logo.svg" alt="">
+                          <p class="small">
+                              Robinsons
+                              <br>
+                              Annapolis Valley
+                              <br>
+                              Brier Island
+                          </p>
+                        </div>
+                  </div>
                     <h3>
                       Robinsons is Canada’s premier producer of fine crafted cannabis.
                       <br>
@@ -153,7 +174,7 @@
                   <div class="inner-width square">
                     <h3 class="small-caps">Our Story</h3>
                     <h3>
-                      It begins with a plant: Cannabis sativa /Cannabis indica. This beautiful, complex plant inspired Founder and Master Grower Andrew Robinson to pursue a formal education in Plant Sciences and Technology at Dalhousie University and Nova Scotia Agricultural College, respectively. Both a passionate connoisseur as well as an intrepid visionary, Andrew brings over XX years’ experience to his craft, his namesake product now a measure of both quality and esteem. Upon assembling an expert team of growers, cultivators, XX, and XY, Robinsons Cannabis was established in XXXX. As our operations continue to grow, our focus remains resolute: produce an unparalleled, premium product, one which will both elevate and enhance Canadians’ unique personal cannabis experience.
+                      It begins with a plant: Cannabis sativa/Cannabis indica. This beautiful, complex plant inspired passionate connoisseur and intrepid visionary Andrew Robinson to share his unparalleled cultivation methodologies with the world. Upon assembling an expert team of growers, cultivators, XX, and XY, Robinsons Cannabis was established. Driven by a lifelong pursuit of excellence, his namesake product has become a respected industry touchstone of both quality and esteem — and the backbone of our company. As our operations continue to grow, our focus remains resolute: produce an unparalleled, premium product, one which will both elevate and enhance the personal cannabis experience for purveyors of quality goods.
                     </h3>
                   </div>
                 </section>
@@ -225,10 +246,10 @@
                 </section>
 
                 <section id="newsletterSignUp">
-                  <div class="inner-width">
+                  <div class="inner-width newsletter-button">
                     <p>Receive updates about news and prodcuts direct to your inbox.</p>
                     <p class="italic">
-                      Subscribe to our Newsletter <span class="newsletter-button">here</span>.
+                      Subscribe to our Newsletter here.
                     </p>
                   </div>
                 </section>
@@ -242,15 +263,8 @@
                   <div class="inner-width square">
                     <h3 class="small-caps">The Region</h3>
                     <h3>
-                      Located at the base of two vast mountain ranges adjacent to the Atlantic Ocean, the sun-kissed Annapolis Valley experiences a mild
-                      micro-climate, producing consistent temperatures and evenly-
-                      distributed rainfall patterns throughout the year. Its rich, nutrient-
-                      dense soil is comprised of pure eroded glacial runoff, creating
-                      fertile land ideal for precise crop production and distinctive ter-
-                      roir. First colonized by Acadian settlers in the early 1600s, this
-                      lush, coastal region is widely considered one of the most abundant agricultural areas within Atlantic Canada, as well as one of
-                      the country’s most robust wine-producing regions. We’re proud
-                      to call it home.
+                      Located at the base of two vast mountain ranges adjacent to the
+                      Atlantic Ocean, the sun-kissed Annapolis Valley experiences a mild micro-climate, producing consistent temperatures and evenly-distributed rainfall patterns throughout the year. Its rich, nutrient-dense soil is comprised of pure eroded glacial runoff, creating fertile land ideal for precise crop production and distinctive terroir. First colonized by Acadian settlers in the early 1600s, this lush, coastal region is widely considered one of the most abundant agricultural areas within Atlantic Canada, as well as one of the country’s most robust wine-producing regions. We’re proud to call it home.
                     </h3>
                   </div>
                 </section>
@@ -282,7 +296,9 @@
                             <span class="italic">Press Release</span>, 04.04.2018
                           </p>
                           <p class="preview">
-                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. <a class="italic" href="">Read More</a>
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility.
+                            <br>
+                            <a class="italic" href="">Read More</a>
                           </p>
                         </div>
                       </div>
@@ -295,7 +311,9 @@
                             <span class="italic">Press Release</span>, 04.04.2018
                           </p>
                           <p class="preview">
-                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. <a class="italic" href="">Read More</a>
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility.
+                            <br>
+                            <a class="italic" href="">Read More</a>
                           </p>
                         </div>
                       </div>
@@ -308,7 +326,9 @@
                             <span class="italic">Press Release</span>, 04.04.2018
                           </p>
                           <p class="preview">
-                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. <a class="italic" href="">Read More</a>
+                            Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility.
+                            <br>
+                            <a class="italic" href="">Read More</a>
                           </p>
                         </div>
                       </div>
@@ -321,7 +341,9 @@
                               <span class="italic">Press Release</span>, 04.04.2018
                             </p>
                             <p class="preview">
-                              Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility. <a class="italic" href="">Read More</a>
+                              Located in Kentville, Nova Scotia, Robinson’s is a privately-owned, late-stage licensed producer applicant under the Access to Cannabis for Medical Purposes Regulations (the “ACMPR”) and is currently constructing a 27,700 square foot purpose-built cannabis cultivation facility.
+                              <br>
+                              <a class="italic" href="">Read More</a>
                             </p>
                         </div>
                       </div>
@@ -331,18 +353,26 @@
           </main>
 
 
-          <footer class="small-caps" id="footer" role="contentinfo">
-                <div id="logos" class="row center">
+          <footer class="" id="footer" role="contentinfo">
+                <div id="logos" class="row center small-caps">
                       <div id="thistle" class="column">
                         <img src="images/SVG/thistle-logo.svg" alt="">
                         <p class="small">
-                          Robinsons Annapolis Valley Cirsium
+                          Robinsons
+                          <br>
+                          Annapolis Valley
+                          <br>
+                          Cirsium
                         </p>
                       </div>
                       <div id="lighthouse" class="column">
                         <img src="images/SVG/lighthouse-logo.svg" alt="">
                         <p class="small">
-                            Robinsons Annapolis Valley Brier Island
+                            Robinsons
+                            <br>
+                            Annapolis Valley
+                            <br>
+                             Brier Island
                         </p>
                       </div>
                 </div>
