--- a/shop.html
+++ b/shop.html
@@ -129,8 +129,8 @@
           </main>
 
 
-          <footer class="small-caps shop" id="footer" role="contentinfo">
-                <div id="logos" class="row center">
+          <footer class="shop" id="footer" role="contentinfo">
+                <div id="logos" class="row center small-caps">
                       <div id="thistle" class="column">
                         <img src="images/SVG/thistle-logo-white.svg" alt="">
                         <p class="small">
