add: age gate styles and page

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
           </header>
 
-          <div id="age-gate-wrap">
+          <!-- <div id="age-gate-wrap">
 
 
             <div class="age-gate">
@@ -135,9 +135,9 @@
                 </select>
               </div>
 
-              <div class="row">
+              <div class="row" id="birthdate">
 
-                <div class="column _25">
+                <div class="column">
                   <select class="black" name="bmonth" id="bmonth">
 
                     <option value="" disabled selected>Month</option>
@@ -156,10 +156,9 @@
 
                   </select>
                 </div>
-                    <!-- </div>
-                    <div class="nhg65"> -->
 
-                <div class="column _25">
+
+                <div class="column">
                     <select class="black" name="bday" id="bday"{% unless enter_date_of_birth %} value="1"{% endunless %}>
 
                         <option value="" disabled selected>Day</option>
@@ -197,9 +196,8 @@
 
                     </select>
                   </div>
-                    <!-- </div>
-                    <div class="nhg65"> -->
-                    <div class="column _25">
+
+                    <div class="column">
                       <select class="black" name="byear" id="byear" {% unless enter_date_of_birth %} value="1950"{% endunless %}>
 
                           <option value="" disabled selected>Year</option>
@@ -305,7 +303,7 @@
               </div>
 
             </div> <!-- .age-gate-->
-          </div> <!-- #age-gate-wrap -->
+          </div> <!-- #age-gate-wrap --> -->
 
 
           <main id="main" class="home" role="main">
